--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h2>New Customer</h2>
-@using (Html.BeginForm("Create", "Customers"))
+@using (Html.BeginForm("Save", "Customers"))
 {
     <div class ="form-group">
         @Html.LabelFor(m=>m.Customer.Name)
@@ -21,11 +21,16 @@
         <label>Membership type</label>
         @Html.DropDownListFor( m => m.Customer.MembershipTypeId, new SelectList (Model.MembershipTypes, "Id", "Name"),"Select Membership type", new { @class = "form-control" })
     </div>
-    <button type="submit" class="btn-primary">Save</button>
-
+    
     <div class="checkbox">
         <label>
             @Html.CheckBoxFor(m => m.Customer.IsSubscribedForNewsleters) Subscribe for newsletters?
         </label>
     </div>
+
+    @Html.HiddenFor(m=>m.Customer.Id)
+
+    <button type="submit" class="btn-primary">Save</button>
+
+    
 }
