--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -7,23 +7,28 @@
 <h2>New Customer</h2>
 @using (Html.BeginForm("Save", "Customers"))
 {
+    
+    @Html.ValidationSummary()
+    
     <div class ="form-group">
         @Html.LabelFor(m=>m.Customer.Name)
         @Html.TextBoxFor(m=>m.Customer.Name, new {@class = "form-control"})
         @Html.ValidationMessageFor(m=>m.Customer.Name)
     </div>
-    
+
+    <div class="form-group">
+        <label>Membership type</label>
+        @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(c => c.Customer.MembershipTypeId)
+    </div>
+
     <div class ="form-group">
         <label>Date of Birth</label>
         @Html.TextBoxFor(m=>m.Customer.BirthDate, "{0:d MMM yyyy}",new {@class = "form-control"})
         @Html.ValidationMessageFor(m=>m.Customer.BirthDate)
     </div>
     
-    <div class="form-group">
-        <label>Membership type</label>
-        @Html.DropDownListFor( m => m.Customer.MembershipTypeId, new SelectList (Model.MembershipTypes, "Id", "Name"),"Select Membership type", new { @class = "form-control" })
-        @Html.ValidationMessageFor(c=>c.Customer.MembershipTypeId)
-    </div>
+    
     
     <div class="checkbox">
         <label>
