Client-side validation

--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -39,6 +39,9 @@
     @Html.HiddenFor(m=>m.Customer.Id)
 
     <button type="submit" class="btn-primary">Save</button>
+}
 
-    
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
