--- a/Vidly/Views/Movies/MovieForm.cshtml
+++ b/Vidly/Views/Movies/MovieForm.cshtml
@@ -10,35 +10,42 @@
 {
     <div>
        <label>Movie name</label>
-        @Html.TextBoxFor(m => m.Movie.Name, new {@class = "form-control"})
+        @Html.TextBoxFor(m => m.Name, new {@class = "form-control"})
+        @Html.ValidationMessageFor(m=>m.Name)
     </div>       
     
     <div>
        <label>Genre</label>
-        @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList (Model.Genres, "Id", "Name"), "Select Genre", new {@class ="form-control"})
+        @Html.DropDownListFor(m => m.GenreId, new SelectList (Model.Genres, "Id", "Name"), "Select Genre", new {@class ="form-control"})
+        @Html.ValidationMessageFor(m => m.GenreId)
     </div>   
     
     <div>
        <label>Date of release</label>
-        @Html.TextBoxFor(m => m.Movie.ReleaseDate,"{0:d MMM yyyy}", new {@class = "form-control"})
+        @Html.TextBoxFor(m => m.ReleaseDate,"{0:d MMM yyyy}", new {@class = "form-control"})
+        @Html.ValidationMessageFor(m => m.ReleaseDate)
     </div>    
     
-    <div>
-        <label>Adding date</label>
-        @Html.TextBoxFor(m => m.Movie.DateAdd, "{0:d MMM yyyy}", new {@class = "form-control"})
-    </div>
-    
+   
     <div>
         <label>In Stock</label>
-        @Html.TextBoxFor(m => m.Movie.InStock, new {@class = "form-control"})
+        @Html.TextBoxFor(m => m.InStock, new {@class = "form-control"})
+        @Html.ValidationMessageFor(m => m.InStock)
     </div>
 
-    @Html.HiddenFor(m=>m.Movie.Id)
+    @Html.HiddenFor(m=>m.Id)
+    @Html.AntiForgeryToken();
+
     <div>
         <p> </p>
         <button type="submit" class="btn-primary">Save</button>
     </div>
     
 
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
 
