--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Vidly.Models.Customer>
 @{
-    ViewBag.Title = "_Customers";
+    ViewBag.Title = "Customers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -49,7 +49,7 @@
                 ]
             });
 
-            $("#customers .js-delete").on("click",
+          $("#customers").on("click",".js-delete",
                 function() {
                     var button = $(this);
 
